--- a/conta-comigo/src/_assets/css/modules/core modules/mesas.module.css
+++ b/conta-comigo/src/_assets/css/modules/core modules/mesas.module.css
@@ -205,6 +205,9 @@
         margin-left: 10px;
 
     }
+   
+    
+    
 
 }
 
@@ -242,7 +245,7 @@
     .container .container_right {
         margin-top: 30px;
         width: 240px;
-        margin-left: 10px;
+        margin-left: 45px;
     }
 
     .container_right .total {
@@ -256,6 +259,27 @@
         margin-left: -15px;
 
 
+    }
+
+    .container_head{
+        font-size: 25px;
+        font-weight: bold;
+        width: 100px;
+        margin-left: 80px;
+        
+        
+    }
+    
+ 
+    
+    .container_head .passagem .line{
+        width: 82px;
+        height: 5px;
+        background-color: var(--paletaNum1);
+        position: absolute;
+        z-index: -1;
+        margin-top: 5px;
+        margin-left: 2px;
     }
 
 
