--- a/conta-comigo/src/_assets/css/modules/core modules/comanda.module.css
+++ b/conta-comigo/src/_assets/css/modules/core modules/comanda.module.css
@@ -47,16 +47,17 @@
 }
 
 .container_main {
- /* background-color: blueviolet; */
+    /* background-color: blueviolet; */
     width: 320px;
     height: 230px;
     display: flex;
     justify-content: center;
     flex-direction: column;
-    padding:10px ;
-    
+    padding: 10px;
+
 }
-.main .abas{
+
+.main .abas {
     /* background-color: blue; */
     margin-top: 70px;
     width: 480px;
@@ -64,10 +65,11 @@
     display: flex;
     justify-content: space-between;
     flex-direction: row;
- 
- 
+
+
 }
- .main .abas .aba_comida{
+
+.main .abas .aba_comida {
     background-color: white;
     width: 160px;
     height: 45px;
@@ -76,21 +78,23 @@
     justify-content: space-evenly;
     align-items: center;
     flex-direction: row;
- }
+}
 
-  .aba_comida img{
+.aba_comida img {
     margin-top: 5px;
-    width: 	23px;
+    width: 23px;
     background-color: var(--paletaNum2);
     border-radius: 5px;
-    padding:2px;
- }
- .aba_comida p{
+    padding: 2px;
+}
+
+.aba_comida p {
     /* margin-right: 10px; */
     font-size: 16px;
     font-weight: bold;
- }
- .main .abas .aba_bebida{
+}
+
+.main .abas .aba_bebida {
     background-color: white;
     width: 150px;
     height: 45px;
@@ -99,17 +103,20 @@
     justify-content: space-evenly;
     align-items: center;
     flex-direction: row;
- }
- .aba_bebida img{
+}
+
+.aba_bebida img {
     margin-top: 5px;
-    width: 	25px;
- }
- .aba_bebida p{
+    width: 25px;
+}
+
+.aba_bebida p {
 
     font-size: 16px;
     color: #888888;
- }
- .main .abas .aba_outro{
+}
+
+.main .abas .aba_outro {
     background-color: white;
     width: 160px;
     height: 45px;
@@ -118,14 +125,15 @@
     justify-content: space-evenly;
     align-items: center;
     flex-direction: row;
- }
+}
 
- .aba_outro p{
-  
+.aba_outro p {
+
     font-size: 16px;
     color: #888888;
- }
- .itens{
+}
+
+.itens {
     box-shadow: 0px 4px 4px rgb(0, 0, 0, 25%);
     width: 300px;
     height: 35px;
@@ -133,42 +141,47 @@
     align-items: center;
     justify-content: space-evenly;
     margin-top: 15px;
- }
- .itens .qtd{
-    font-size: 16px;
-    color: #888888;
- }
- 
- .itens .item{
-    font-size: 16px;
-    color: #888888;
- }
-.itens .valor{
-    font-size: 16px;
-    color: var(	--paletaNum1);
 }
-.container_head p{
+
+.itens .qtd {
+    font-size: 16px;
+    color: #888888;
+}
+
+.itens .item {
+    font-size: 16px;
+    color: #888888;
+}
+
+.itens .valor {
+    font-size: 16px;
+    color: var(--paletaNum1);
+}
+
+.container_head p {
     margin-top: 5px;
-    padding: 1px ;
+    padding: 1px;
 }
-.pessoa{
+
+.pessoa {
     height: 35px;
     display: flex;
     width: 200px;
     justify-content: space-evenly;
     align-items: center;
     margin-top: 20px;
-   margin-right: 200px;
+    margin-right: 200px;
+
 
 }
 
 
-.pessoa img{
- 
+.pessoa img {
+
     width: 17px;
 }
 
-.pessoa .icon{
+.pessoa .icon {
     margin-left: -40px;
     width: 33px;
     height: 33px;
@@ -182,7 +195,7 @@
     border-radius: 100%;
 }
 
-.pessoa .nome{
+.pessoa .nome {
     margin-left: -65px;
     color: #888888;
     font-size: 15px;
@@ -196,6 +209,504 @@
     position: absolute;
     z-index: -1;
     margin-top: 5px;
-margin-left: -35px;
+    margin-left: -35px;
 }
 
+
+@media screen and (max-width: 1150px) {
+
+    .main {
+        margin-top: 50px;
+    }
+
+    .container {
+        margin-top: 150px;
+    }
+
+    
+    .container {
+
+        border-radius: 0px 0px 16px 16px;
+        width: 330;
+        padding: 70px 0px 50px 80px;
+        margin-top: -10px;
+        z-index: -2;
+        height: 320px;
+    }
+
+    .container_head {
+
+        margin-left: 40px;
+        font-size: 18px;
+        font-weight: bold;
+        width: 250px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        flex-direction: column;
+        margin-top: -20px;
+
+
+    }
+
+    .container_main {
+
+        margin-left: 6px;
+        width: 300px;
+        height: 230px;
+        display: flex;
+        justify-content: center;
+        flex-direction: column;
+        padding: 10px;
+
+    }
+
+    .main .abas {
+
+        margin-top: 200;
+        width: 480px;
+        height: 50px;
+        display: flex;
+        justify-content: space-between;
+        flex-direction: row;
+
+
+    }
+
+    .main .abas .aba_comida {
+        background-color: white;
+        width: 160px;
+        height: 45px;
+        border-radius: 16px 16px 0px 0px;
+        display: flex;
+        justify-content: space-evenly;
+        align-items: center;
+        flex-direction: row;
+    }
+
+    .aba_comida img {
+        margin-top: 5px;
+        width: 23px;
+        background-color: var(--paletaNum2);
+        border-radius: 5px;
+        padding: 2px;
+    }
+
+    .aba_comida p {
+        /* margin-right: 10px; */
+        font-size: 16px;
+        font-weight: bold;
+    }
+
+    .main .abas .aba_bebida {
+        background-color: white;
+        width: 150px;
+        height: 45px;
+        border-radius: 16px 16px 0px 0px;
+        display: flex;
+        justify-content: space-evenly;
+        align-items: center;
+        flex-direction: row;
+    }
+
+    .aba_bebida img {
+        margin-top: 5px;
+        width: 25px;
+    }
+
+    .aba_bebida p {
+
+        font-size: 16px;
+        color: #888888;
+    }
+
+    .main .abas .aba_outro {
+        background-color: white;
+        width: 160px;
+        height: 45px;
+        border-radius: 16px 16px 0px 0px;
+        display: flex;
+        justify-content: space-evenly;
+        align-items: center;
+        flex-direction: row;
+    }
+
+    .aba_outro p {
+
+        font-size: 16px;
+        color: #888888;
+    }
+
+    .itens {
+        box-shadow: 0px 4px 4px rgb(0, 0, 0, 25%);
+        width: 300px;
+        height: 35px;
+        display: flex;
+        align-items: center;
+        justify-content: space-evenly;
+        margin-top: 15px;
+    }
+
+    .itens .qtd {
+        font-size: 16px;
+        color: #888888;
+    }
+
+    .itens .item {
+        font-size: 16px;
+        color: #888888;
+    }
+
+    .itens .valor {
+        font-size: 16px;
+        color: var(--paletaNum1);
+    }
+
+    .container_head p {
+        margin-top: 5px;
+        padding: 1px;
+    }
+
+    
+.pessoa {
+    height: 35px;
+    display: flex;
+    width: 200px;
+    justify-content: space-evenly;
+    align-items: center;
+    margin-top: 20px;
+    margin-right: 180px;
+    /* background-color: blue; */
+
+}
+
+}
+
+@media screen and (max-width: 900px) {
+
+
+
+
+    .container {
+
+        border-radius: 0px 0px 16px 16px;
+        width: 330;
+        padding: 70px 0px 50px 80px;
+        margin-top: -10px;
+        z-index: -2;
+        height: 320px;
+    }
+
+    .container_head {
+
+        margin-left: 40px;
+        font-size: 18px;
+        font-weight: bold;
+        width: 250px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        flex-direction: column;
+        margin-top: -20px;
+
+
+    }
+
+    .container_main {
+
+        margin-left: 6px;
+        width: 300px;
+        height: 230px;
+        display: flex;
+        justify-content: center;
+        flex-direction: column;
+        padding: 10px;
+
+    }
+
+    .main .abas {
+
+        margin-top: 200;
+        width: 480px;
+        height: 50px;
+        display: flex;
+        justify-content: space-between;
+        flex-direction: row;
+
+
+    }
+
+    .main .abas .aba_comida {
+        background-color: white;
+        width: 160px;
+        height: 45px;
+        border-radius: 16px 16px 0px 0px;
+        display: flex;
+        justify-content: space-evenly;
+        align-items: center;
+        flex-direction: row;
+    }
+
+    .aba_comida img {
+        margin-top: 5px;
+        width: 23px;
+        background-color: var(--paletaNum2);
+        border-radius: 5px;
+        padding: 2px;
+    }
+
+    .aba_comida p {
+        /* margin-right: 10px; */
+        font-size: 16px;
+        font-weight: bold;
+    }
+
+    .main .abas .aba_bebida {
+        background-color: white;
+        width: 150px;
+        height: 45px;
+        border-radius: 16px 16px 0px 0px;
+        display: flex;
+        justify-content: space-evenly;
+        align-items: center;
+        flex-direction: row;
+    }
+
+    .aba_bebida img {
+        margin-top: 5px;
+        width: 25px;
+    }
+
+    .aba_bebida p {
+
+        font-size: 16px;
+        color: #888888;
+    }
+
+    .main .abas .aba_outro {
+        background-color: white;
+        width: 160px;
+        height: 45px;
+        border-radius: 16px 16px 0px 0px;
+        display: flex;
+        justify-content: space-evenly;
+        align-items: center;
+        flex-direction: row;
+    }
+
+    .aba_outro p {
+
+        font-size: 16px;
+        color: #888888;
+    }
+
+    .itens {
+        box-shadow: 0px 4px 4px rgb(0, 0, 0, 25%);
+        width: 300px;
+        height: 35px;
+        display: flex;
+        align-items: center;
+        justify-content: space-evenly;
+        margin-top: 15px;
+    }
+
+    .itens .qtd {
+        font-size: 16px;
+        color: #888888;
+    }
+
+    .itens .item {
+        font-size: 16px;
+        color: #888888;
+    }
+
+    .itens .valor {
+        font-size: 16px;
+        color: var(--paletaNum1);
+    }
+
+    .container_head p {
+        margin-top: 5px;
+        padding: 1px;
+    }
+
+    
+.pessoa {
+    height: 35px;
+    display: flex;
+    width: 200px;
+    justify-content: space-evenly;
+    align-items: center;
+    margin-top: 20px;
+    margin-right: 180px;
+    /* background-color: blue; */
+
+}
+
+
+
+}
+
+@media screen and (max-width: 600px) {
+
+
+
+    .container {
+
+        border-radius: 0px 0px 16px 16px;
+        width: 230;
+        padding: 60px 0px 40px 70px;
+        margin-top: -10px;
+        z-index: -2;
+        height: 300px;
+    }
+
+    .container_head {
+
+        margin-left: 40px;
+        font-size: 18px;
+        font-weight: bold;
+        width: 250px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        flex-direction: column;
+        margin-top: -20px;
+
+
+    }
+
+    .container_main {
+
+        margin-left: 6px;
+        width: 300px;
+        height: 230px;
+        display: flex;
+        justify-content: center;
+        flex-direction: column;
+        padding: 10px;
+
+    }
+
+    .main .abas {
+
+        margin-top: 200;
+        width: 470px;
+        height: 50px;
+        display: flex;
+        justify-content: space-between;
+        flex-direction: row;
+
+
+    }
+
+    .main .abas .aba_comida {
+        background-color: white;
+        width: 160px;
+        height: 45px;
+        border-radius: 16px 16px 0px 0px;
+        display: flex;
+        justify-content: space-evenly;
+        align-items: center;
+        flex-direction: row;
+    }
+
+    .aba_comida img {
+        margin-top: 5px;
+        width: 23px;
+        background-color: var(--paletaNum2);
+        border-radius: 5px;
+        padding: 2px;
+    }
+
+    .aba_comida p {
+        /* margin-right: 10px; */
+        font-size: 16px;
+        font-weight: bold;
+    }
+
+    .main .abas .aba_bebida {
+        background-color: white;
+        width: 150px;
+        height: 45px;
+        border-radius: 16px 16px 0px 0px;
+        display: flex;
+        justify-content: space-evenly;
+        align-items: center;
+        flex-direction: row;
+    }
+
+    .aba_bebida img {
+        margin-top: 5px;
+        width: 25px;
+    }
+
+    .aba_bebida p {
+
+        font-size: 16px;
+        color: #888888;
+    }
+
+    .main .abas .aba_outro {
+        background-color: white;
+        width: 160px;
+        height: 45px;
+        border-radius: 16px 16px 0px 0px;
+        display: flex;
+        justify-content: space-evenly;
+        align-items: center;
+        flex-direction: row;
+    }
+
+    .aba_outro p {
+
+        font-size: 16px;
+        color: #888888;
+    }
+
+    .itens {
+        box-shadow: 0px 4px 4px rgb(0, 0, 0, 25%);
+        width: 300px;
+        height: 35px;
+        display: flex;
+        align-items: center;
+        justify-content: space-evenly;
+        margin-top: 15px;
+    }
+
+    .itens .qtd {
+        font-size: 16px;
+        color: #888888;
+    }
+
+    .itens .item {
+        font-size: 16px;
+        color: #888888;
+    }
+
+    .itens .valor {
+        font-size: 16px;
+        color: var(--paletaNum1);
+    }
+
+    .container_head p {
+        margin-top: 5px;
+        padding: 1px;
+    }
+
+    
+.pessoa {
+    height: 35px;
+    display: flex;
+    width: 200px;
+    justify-content: space-evenly;
+    align-items: center;
+    margin-top: 20px;
+    margin-right: 180px;
+    /* background-color: blue; */
+
+}
+
+
+
+} 
