--- a/conta-comigo/src/_assets/css/modules/core modules/perfil.module.css
+++ b/conta-comigo/src/_assets/css/modules/core modules/perfil.module.css
@@ -225,6 +225,49 @@
     padding: 20px;
 }
 
+.chave{
+    margin-left: 230px;
+    margin-right: 30px;
+    font-size: 16px;
+}
+
+.add_pix{
+    width: 25px;
+    height: 25px;
+    font-size: 13px;
+    font-weight: bold;
+    color: white;
+    border: none;
+    background-color: var(--secundary-color);
+    border-radius: 15px;
+    margin-top: 5px;
+    cursor: pointer;
+}
+
+.add_pix img {
+    margin-top: 3px;
+    width: 13px;
+    height: 13px;
+}
+.containerHead{
+
+    display: flex;
+    justify-content: space-between;
+
+}
+.containerHead .titulo{
+    font-size: 27px;
+    font-weight: bold;
+}
+
+.containerHead .cadastrar{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 22px;
+    cursor: pointer;
+}
+
 @media screen and (max-width: 1150px) {
     .container{
         margin-top: 140px;
