--- a/conta-comigo/src/_assets/css/modules/listas modules/lista_funcionarios.module.css
+++ b/conta-comigo/src/_assets/css/modules/listas modules/lista_funcionarios.module.css
@@ -70,3 +70,22 @@
     width: 26px;
     height: 26px;
 }
+
+@media screen and (max-width: 600px) {
+    .editar img{
+        margin-top: 10px;
+        width: 20px;
+        height: 20px;
+    }
+    
+    .apagar img{
+        margin-top: 10px;
+        width: 20px;
+        height: 20px;
+    }
+    .funcionario .icon img{
+        width: 26px;
+    }
+
+    
+}
