--- a/conta-comigo/src/_assets/css/modules/core modules/cadastrar_pix.module.css
+++ b/conta-comigo/src/_assets/css/modules/core modules/cadastrar_pix.module.css
@@ -25,7 +25,7 @@
 
     background-color: white;
     border-radius: 16px;
-    width: 700px;
+    width: 500px;
     padding: 70px 0px 50px 80px;
     margin-top: 50px;
     margin-left: -70px;
@@ -55,6 +55,7 @@
 
 
 .buttons {
+    margin-left: 50px;
     margin-top: -60px;
     width: 320px;
     display: flex;
@@ -82,7 +83,8 @@
 
 
 .buttons .button_two {
-    width: 155px;
+    margin-left: 10px;
+    width: 150px;
     height: 45px;
     font-size: 13px;
     font-weight: bold;
@@ -97,6 +99,7 @@
 }
 
 .container_top {
+    margin-left: 50px;
     font-size: 22px;
     font-weight: bold;
     width: 350px;
@@ -155,11 +158,11 @@
 }
 
 .container_main {
-    /* background-color: brown; */
     display: flex;
     width: 320px;
     height: 230px;
     display: flex;
+    margin-left: 50px;
     margin-top: 15px;
     justify-content: center;
     flex-direction: column;
@@ -192,3 +195,4 @@
 .container_right img{
     width: 300px;
 }
+
