--- a/conta-comigo/src/_assets/css/modules/core modules/comanda.module.css
+++ b/conta-comigo/src/_assets/css/modules/core modules/comanda.module.css
@@ -1,7 +1,9 @@
+
+
 .main {
     width: 100%;
     display: flex;
-    justify-content: center;
+    flex-direction: column;
     align-items: center;
 }
 
@@ -12,6 +14,7 @@
     background-color: white;
     border-radius: 15px;
     box-shadow: 0px 4px 4px rgb(0, 0, 0, 25%);
+    margin-top: 30px;
 }
 
 .header{
