--- a/conta-comigo/src/_assets/css/modules/divisao modules/divisao_pers.module.css
+++ b/conta-comigo/src/_assets/css/modules/divisao modules/divisao_pers.module.css
@@ -5,6 +5,11 @@
     flex-direction: column;
 }
 
+.select{
+    font-size: 15px;
+    margin-left: -20px;
+}
+
 .cardzin {
 }
 
@@ -129,6 +134,12 @@
     height: 100%;
 }
 
+.precoErro {
+    display: flex;
+    align-items: center;
+    height: 100%;
+}
+
 .card_header .nome {
     width: 100px;
     font-size: 16px;
@@ -138,6 +149,15 @@
 .card_header .preco {
     width: 100px;
     font-size: 20px;
+    color: var(--paletaNum1);
+    font-weight: bold;
+}
+
+.card_header .precoErro {
+    width: 100px;
+    font-size: 20px;
+    color: red;
+    font-weight: bold;
 }
 
 .card_main {}
@@ -168,7 +188,8 @@
     justify-content: center;
     align-items: center;
     border-radius: 100%;
-    margin-top: 3px;
+    margin-top: 20px;
+    margin-left: 20px;
 }
 
 .card_pessoas {
