--- a/conta-comigo/src/_assets/css/modules/lateral_menu.module.css
+++ b/conta-comigo/src/_assets/css/modules/lateral_menu.module.css
@@ -175,6 +175,7 @@
     border-radius: 24px;
     font-weight: bold;
     box-shadow: 0px 4px 4px rgb(0, 0, 0, 25%);
+    cursor: pointer;
 }
 
 .sair{
