Atualizando QR code

--- a/conta-comigo/src/_assets/css/modules/divisao modules/pagamento.module.css
+++ b/conta-comigo/src/_assets/css/modules/divisao modules/pagamento.module.css
@@ -106,8 +106,19 @@
 
 .QRbox img{
     position: absolute;
-    margin-left: 21px;
-    margin-top: 21px;
+    width: 160px;
+    margin-left: 10px;
+    margin-top: 10px;
+}
+
+.loading{
+    position: absolute;
+    margin-left: 50px;
+    margin-top: 50px;
+}
+
+.loading img{
+    width: 60px;
 }
 
 .QRbox .squares{
