--- a/conta-comigo/src/_assets/css/modules/core modules/inicio.module.css
+++ b/conta-comigo/src/_assets/css/modules/core modules/inicio.module.css
@@ -8,7 +8,8 @@
 
 .cardAtencao{
     width: 400px;
-    margin-top: 50px;
+    margin-top: 60px;
+    margin-bottom: 40px;
     border-radius: 20px;
     box-shadow: 0px 4px 4px rgb(0, 0, 0, 25%);
     padding: 20px 50px;
