arrumando responsividade no perfil

--- a/conta-comigo/src/_assets/css/modules/core modules/perfil.module.css
+++ b/conta-comigo/src/_assets/css/modules/core modules/perfil.module.css
@@ -1,11 +1,11 @@
-.main{
+.main {
     width: 100%;
     display: flex;
     align-items: center;
     flex-direction: column;
 }
 
-.container{
+.container {
     border-radius: 16px;
     width: 800px;
     height: 550px;
@@ -16,12 +16,12 @@
     margin-left: -30px;
 }
 
-.container .up{
+.container .up {
     display: flex;
     justify-content: space-between;
 }
 
-.container .up .card{
+.container .up .card {
     background-color: white;
     width: 42%;
     height: 170px;
@@ -31,7 +31,7 @@
     padding: 0px 20px;
 }
 
-.container .mid .card{
+.container .mid .card {
     background-color: white;
     width: 95%;
     height: 170px;
@@ -41,7 +41,7 @@
     padding: 0px 20px;
 }
 
-.container .bot  {
+.container .bot {
     background-color: white;
     width: 100%;
     height: 170px;
@@ -50,7 +50,8 @@
     align-items: center;
 
 }
-.container	.bot .card{
+
+.container .bot .card {
 
     margin-left: 40px;
     display: flex;
@@ -58,15 +59,16 @@
     /* padding: 0px 20px;  */
     flex-direction: column;
 
-} 
-.container	.bot .card p{
+}
+
+.container .bot .card p {
     font-size: 16px;
-    text-align:left;
+    text-align: left;
     color: gray;
 }
 
 
-.card .card_main{
+.card .card_main {
     width: 100%;
     height: 120px;
     display: flex;
@@ -74,45 +76,45 @@
     align-items: center;
 }
 
-.btn{
+.btn {
     height: 120px;
 }
 
-.btn img{
+.btn img {
     width: 30px;
 }
 
-.card .card_main .card_header .card_titulo{
+.card .card_main .card_header .card_titulo {
     font-size: 20px;
     font-weight: bold;
     width: 230px;
 }
 
-.card .card_main .card_dados{
+.card .card_main .card_dados {
     width: 230px;
     margin-top: 10px;
 }
 
-.card .card_main .card_dados p{
+.card .card_main .card_dados p {
     margin-top: 10px;
     font-size: 16px;
 }
 
-.lineRed{
+.lineRed {
     width: 7px;
     height: 120px;
     background-color: var(--paletaNum3);
     border-radius: 10px;
 }
 
-.lineYellow{
+.lineYellow {
     width: 7px;
     height: 120px;
     background-color: var(--paletaNum2);
     border-radius: 10px;
 }
 
-.lineGreen{
+.lineGreen {
     width: 7px;
     height: 120px;
     background-color: var(--paletaNum1);
@@ -121,29 +123,34 @@
 
 }
 
- .lineBlack{
+.lineBlack {
     width: 7px;
     height: 120px;
     background-color: var(--secundary-color);
     border-radius: 10px;
 }
-.leftSide{
+
+.leftSide {
     width: 200px;
     height: 70px;
     margin-left: 50px;
 }
-.leftSide .titulo{
+
+.leftSide .titulo {
     font-weight: bold;
     font-size: 22px;
 }
-.leftSide p{
+
+.leftSide p {
     margin-top: 10px;
     font-size: 18px;
 }
-.cadeado{
-    margin-left:70px;
+
+.cadeado {
+    margin-left: 70px;
 }
-.rightSide{
+
+.rightSide {
     display: flex;
     width: 300px;
     justify-content: flex-end;
@@ -152,22 +159,23 @@
     display: flex;
 
 }
-.rightSide .add_func{
+
+.rightSide .add_func {
     display: flex;
     justify-content: space-between;
     flex-direction: row;
     cursor: pointer;
-    
+
 }
 
-.rightSide .valor{
+.rightSide .valor {
     font-size: 18px;
     font-weight: bold;
-    margin-left:90px;
+    margin-left: 90px;
     color: var(--secundary-color);
 }
 
-.rightSide .add_cliente{
+.rightSide .add_cliente {
     margin-right: 40px;
     width: 25px;
     height: 25px;
@@ -181,35 +189,40 @@
     cursor: pointer;
 
 }
+
 .rightSide img {
     margin-top: 3px;
     width: 13px;
     height: 13px;
 }
 
-.rightSide .listar{
+.rightSide .listar {
     display: flex;
     justify-content: center;
     flex-direction: row;
     font-size: 16px;
     margin-left: 23px;
-    margin-top: 10px;   
+    margin-top: 10px;
     cursor: pointer;
-   
+
 }
-.rightSide .listar img{
+
+.rightSide .listar img {
     margin-top: 6px;
 }
-.card .card_titulo{
+
+.card .card_titulo {
     font-weight: bold;
     font-size: 22px;
     width: 250px;
 
 }
-.card p{
+
+.card p {
     font-size: 18px;
     margin-top: 15px;
 }
+
 .select {
     margin-top: 17px;
     width: 500px;
@@ -229,13 +242,13 @@
     padding: 20px;
 }
 
-.chave{
+.chave {
     margin-left: 230px;
     margin-right: 30px;
     font-size: 16px;
 }
 
-.add_pix{
+.add_pix {
     width: 25px;
     height: 25px;
     font-size: 13px;
@@ -253,18 +266,20 @@
     width: 13px;
     height: 13px;
 }
-.containerHead{
+
+.containerHead {
 
     display: flex;
     justify-content: space-between;
 
 }
-.containerHead .titulo{
+
+.containerHead .titulo {
     font-size: 27px;
     font-weight: bold;
 }
 
-.containerHead .cadastrar{
+.containerHead .cadastrar {
     display: flex;
     justify-content: center;
     align-items: center;
@@ -273,33 +288,33 @@
 }
 
 
-.card_editar .popup{
+.card_editar .popup {
     background-color: white;
     padding: 50px;
     border-radius: 10px;
 }
 
-.popup .header_popup{
+.popup .header_popup {
     display: flex;
     justify-content: space-between;
     width: 350px;
     margin-top: 40px;
 }
 
-.popup .header_popup .line{
+.popup .header_popup .line {
     width: 9px;
     height: 69px;
     background-color: var(--paletaNum2);
     border-radius: 20px;
 }
 
-.popup .header_popup .titulo{
+.popup .header_popup .titulo {
     width: 310px;
     font-size: 28px;
     font-weight: bold;
 }
 
-.popup .inputs{
+.popup .inputs {
     display: flex;
     flex-direction: column;
     margin-top: 20px;
@@ -307,7 +322,7 @@
     align-items: center;
 }
 
-.popup .inputs input{
+.popup .inputs input {
     width: 300px;
     height: 45px;
     border-radius: 5px;
@@ -319,7 +334,7 @@
     padding: 0px 20px;
 }
 
-select{
+select {
     width: 150px;
     height: 45px;
     padding: 0px 20px;
@@ -328,7 +343,7 @@ select{
     border: none;
 }
 
-.popup button{
+.popup button {
     width: 340px;
     height: 45px;
     background-color: var(--secundary-color);
@@ -343,103 +358,167 @@ select{
 
 
 @media screen and (max-width: 1150px) {
-    .container{
+    .container {
         margin-top: 140px;
     }
+}
 
-    @media screen and (max-width: 900px){
-        .card .card_main .card_header .card_titulo{
-            font-size: 16px;
-        }
+@media screen and (max-width: 900px) {
+    .card .card_main .card_header .card_titulo {
+        font-size: 16px;
+    }
 
-        .container{
-            justify-content: center;
-            margin-top: 180px;
-        }
-
-
-        .container .up{
-            flex-direction: column;
-            align-items: center;
-        }
-
-        .container .up .card{
-            margin-top: 20px;
-        }
-
-        .container .mid .card{
-            width: 42%;
-            margin-top: 20px;
-        }
-
-        .container .mid{
-            display: flex;
-            align-items: center;
-            justify-content: center;
-           
-        }
-
+    .container {
+        justify-content: center;
+        margin-top: 110px;
+        height: 800px;
         
-
-        .rightSide .valor{
-            display: none;
-        }
-
-        .rightSide .listar{
-            display: none;
-        }
+    }
 
 
-        .rightSide{
-            width: 100px;
-            margin-left: 30px;
-        }
+    .container .up {
+        flex-direction: column;
+        align-items: center;
+   
+    }
 
-        .leftSide{
-            margin-left: 20px;
-        }
+    .container .up .card {
+        margin-top: 20px;
+    }
 
-        .cadeado{
-            margin-left: 30px;
-        }
+    .container .mid .card {
+        width: 42%;
+        margin-top: 20px;
+    }
 
-        .leftSide .titulo{
-            font-size: 18px;
-        }
-
-        .leftSide p{
-            font-size: 16px;
-        }
-
-        .select{
-            flex-direction: column;
-        }
-
-        .grupo{
-            display: flex;
-            flex-direction: column;
-        }
-
-        .container .bot  {
-            background-color: white;
-            width: 42%;
-            height: 170px;
-            justify-content: center;
-            border-radius: 15px;
-            display: flex;
-            align-items: center;
-            margin-left: 200px;
-        
-        }
-        .container	.bot .card{
-            width: 42%;
-            margin-left: 0px;
-            display: flex;
-            /* align-content: flex-start; */
-            /* padding: 0px 20px;  */
-            flex-direction: column;
-        
-        } 
+    .container .mid {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+      
 
     }
+    .container .mid p{
+       flex-direction: row;
+
+        width: 150px;
+    }
+
+
+
+    .rightSide .valor {
+        display: none;
+    }
+
+    .rightSide .listar {
+        display: none;
+    }
+
+
+    .rightSide {
+        width: 100px;
+        margin-left: 30px;
+    }
+
+    .leftSide {
+        margin-left: 20px;
+    }
+
+    .cadeado {
+        margin-left: 30px;
+    }
+
+    .leftSide .titulo {
+        font-size: 18px;
+    }
+
+    .leftSide p {
+        font-size: 16px;
+    }
+
+    .select {
+        flex-direction: column;
+    }
+
+    .grupo {
+        display: flex;
+        flex-direction: column;
+    }
+
+    .container .bot {
+        background-color: white;
+        width: 47%;
+        height: 169px;
+        justify-content: center;
+        border-radius: 15px;
+        display: flex;
+        align-items: center;
+        margin-left: 215px;
+        margin-top: 20px;
+    }
+
+    .container .bot .card {
+        width: 50%;
+        margin-left: 30px;
+        display: flex;
+        flex-direction: row;
+       
+
+
+    }
+    .container .bot .card .card_titulo{
+        font-size: 19px;
+    }
+
+    .container .bot .card p {
+        display: none;
+    }
+
+    .chave {
+        margin-left: -245px;
+        margin-right: 30px;
+        font-size: 16px;
+        margin-top: 50px;
+        width: 150px;
+        
+    }
+
+    .add_pix {
+        width: 25px;
+        height: 25px;
+        font-size: 13px;
+        font-weight: bold;
+        color: white;
+        border: none;
+        background-color: var(--secundary-color);
+        border-radius: 15px;
+        margin-top: 40px;
+        cursor: pointer;
+        margin-left: 40px;
+   
+    }
+
+    .add_pix img {
+        margin-top: 3px;
+        width: 13px;
+        height: 13px;
+    }
+
+    .lineGreen {
+        margin-top: 10PX;
+        width: 7px;
+        height: 120px;
+        background-color: var(--paletaNum1);
+        border-radius: 10px;
+        margin-left: -110px;
+
+    }
+    .lineBlack {
+        width: 20px;
+        height: 120px;
+        background-color: var(--secundary-color);
+        border-radius: 10px;
+    }
+
 }
+
