--- a/conta-comigo/src/_assets/css/modules/core modules/mesas.module.css
+++ b/conta-comigo/src/_assets/css/modules/core modules/mesas.module.css
@@ -151,11 +151,11 @@
 @media screen and (max-width: 1150px) {
 
     .main {
-        margin-top: 50px;
+        margin-top: 20px;
     }
 
     .container {
-        margin-top: 150px;
+        margin-top: 40px;
     }
 
 }
@@ -165,14 +165,12 @@
     .buttons {
         width: 300;
         float: right;
-
-
-
     }
 
     .buttons button {
         width: 180px;
         height: 46px;
+        margin-bottom: 20px;
 
 
 
@@ -186,9 +184,7 @@
 
     .container {
         width: 430px;
-        height: 560px;
-        margin-top: 120px;
-
+        margin-bottom: 40px;
     }
 
     .container .container_right {
@@ -199,9 +195,7 @@
 
     .pessoas {
         width: 300px;
-        height: 400px;
         margin-left: 10px;
-
     }
    
     
@@ -215,7 +209,7 @@
         width: 150;
         float: right;
         margin-top: -20px;
-
+        margin-bottom: 20px;
 
 
     }
@@ -235,9 +229,6 @@
 
     .container {
         width: 320px;
-        height: 580px;
-        margin-top: 90px;
-
     }
 
     .container .container_right {
@@ -253,10 +244,7 @@
 
     .pessoas {
         width: 250px;
-        height: 400px;
         margin-left: -15px;
-
-
     }
 
     .container_head{
