--- a/conta-comigo/src/_assets/css/modules/core modules/comanda.module.css
+++ b/conta-comigo/src/_assets/css/modules/core modules/comanda.module.css
@@ -111,3 +111,25 @@
     display: flex;
     justify-content: center;
 }
+
+
+@media screen and (max-width: 600px) {
+    .container{
+        width: 250px;
+        padding: 0px 60px 20px 60px;
+    }
+
+    .comandaHeader .titulo p{
+        font-size: 18px;
+    }
+
+    .comandaHeader .titulo b{
+        font-size: 22px;
+    }
+
+    .comandaHeader .titulo .line{
+        width: 110px;
+        height: 4px;
+        background-color: var(--secundary-color);
+    }
+}
