--- a/conta-comigo/src/_assets/css/modules/divisao modules/pag_singular.module.css
+++ b/conta-comigo/src/_assets/css/modules/divisao modules/pag_singular.module.css
@@ -139,11 +139,11 @@
 @media screen and (max-width: 1150px) {
 
     .main {
-        margin-top: 50px;
+        margin-top: 10px;
     }
 
     .container {
-        margin-top: 150px;
+        margin-top: 40px;
     }
 
 }
@@ -170,8 +170,6 @@
 
     .container {
         width: 400px;
-        height: 480px;
-        margin-top: 120px;
 
     }
     
@@ -238,16 +236,16 @@
 
 
     .container {
-        width: 280px;
-        height: 440px;
-        margin-top: 90px;
+        width: 230px;
+        height: 340px;
+        margin-bottom: 50px;
 
     }
 
     .container .container_right {
         margin-top: 30px;
         width: 240px;
-        margin-left: 65px;
+        margin-left: 45px;
     }
 
     .container_right .total {
@@ -260,7 +258,7 @@
         font-size: 25px;
         font-weight: bold;
         width: 300px;
-        margin-left: 25px;
+        margin-left: 0px;
         
     }
     
