atualizando front da tela inicio

--- a/conta-comigo/src/_assets/css/modules/core modules/inicio.module.css
+++ b/conta-comigo/src/_assets/css/modules/core modules/inicio.module.css
@@ -122,9 +122,10 @@
 
 .pagamentos{
     padding: 20px 20px 20px 0px;
-    width: 710px;
+    width: 580px;
     display: flex;
     justify-content: space-between;
+    flex-wrap: wrap;
 }
 
 @media screen and (max-width: 1150px){
