--- a/conta-comigo/src/_assets/css/modules/listas modules/lista_pagamentos.module.css
+++ b/conta-comigo/src/_assets/css/modules/listas modules/lista_pagamentos.module.css
@@ -1,38 +1,27 @@
 .pagamento{
     box-shadow: 0px 4px 4px rgb(0, 0, 0, 25%);
-    width: 300px;
-    padding: 2px 20px;
-    margin-top: 25px;
+    width: 280px;
+    display: flex;
     border-radius: 10px;
+    margin-top: 20px;
 }
 
-.pagamento .titulo{
-    font-size: 18px;
-    color: var(--paletaNum1);
+.preco{
+}
+
+.money{
+    /* background-color: var(--paletaNum1); */
     font-weight: bold;
-    margin-top: 15px;
+    padding: 5px;
+    border-radius: 5px;
 }
 
-.pagamento .desc_mesa{
-    font-size: 16px;
-    font-weight: bold;
-    margin-top: 10px;
-}
-
-.pagamento img{
-    width: 300px;
-    margin-top: 10px;
+.desc{
+    margin-left: 5px;
 }
 
 @media screen and (max-width: 600px) {
-
-    .pagamento .titulo{
-        font-size: 16px;
-    }
     .pagamento{
-        width: 200px;
-    }
-    .pagamento img{
-        width: 200px;
+        width: 220px;
     }
 }
